tests/compile_fail/debug/legacy_fmt_syntax.stderr
error: Legacy syntax, use: `"Stuff({}): {}", bar`
 --> tests/compile_fail/debug/legacy_fmt_syntax.rs:3:12
  |
3 |     #[debug(fmt = "Stuff({}): {}", "bar")]
  |            ^
